overflow bug fixed

--- a/src/Pages/ContactPage/ContactPage.css
+++ b/src/Pages/ContactPage/ContactPage.css
@@ -16,7 +16,7 @@
         position: unset;
     }
     .background{
-        height: auto;
+        height: max-content;
         padding:15% 0 0 0;
     }
     .contact-sections p{
